# rust_dmt_backend

./: Cargo.toml  Rocket.toml
src/: cors_utils.rs  lib.rs  main.rs
src/models/: answer.rs  imatrix.rs  lab_first.rs  mod.rs
src/routes/: index.rs
src/use_cases/: calculate_lab_first.rs  calculate_new_matrix.rs  mod.rs
