[package]
name = "dmt_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = {version = "1.0", features = ["derive"]}

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
